ec2-test-s3.yml
AWSTemplateFormatVersion: 2010-09-09
Description: OneNineAI G2 - Task 4 on DevOps and Automation (Testing S3 bucket/DNS/EC2)

Parameters:
  ImageID:
    Type: String
    Description: 'RedHat AMI'
    Default: 'ami-0931978297f275f71'
  InstanceType:
    Type: String
    Description: 't2.micro as its included in free tier'
    Default: t2.micro
  KeyName:
    Description: SSH Key pair to securely connect to instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: OneNineG2T4
  SSHLocation: 
      Description: The IP address range that can be used to SSH to the EC2 instances
      Type: String
      MinLength: '9'
      MaxLength: '18'
      Default: 0.0.0.0/0
      AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
      ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  MyS3BucketName:
    Type: 'String'
    Description: 'Name of the S3 bucket to grant access to'
    Default: 'test-s3-onenine'
  
Resources:
    MyIAMRole:
      Type: 'AWS::IAM::Role'
      Properties:
        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: 'Allow'
              Principal:
                Service: 'ec2.amazonaws.com'
              Action: 'sts:AssumeRole'

    MyS3BucketPolicy:
      Type: 'AWS::IAM::Policy'
      Properties:
        PolicyName: 'S3AccessPolicy'
        Roles:
          - !Ref MyIAMRole
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: 'Allow'
              Action:
                - 's3:ListBucket'
              Resource: !Sub 'arn:aws:s3:::${MyS3BucketName}'
        
    EC2Instance:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: !Ref ImageID
        InstanceType: !Ref 'InstanceType'
        KeyName: !Ref 'KeyName'
        IamInstanceProfile: !Ref MyIAMRole
        UserData: 
          Fn::Base64: !Sub |
            #!/bin/sh
            
            sudo yum install git -y
            
            # 1. cloning chatboi-ui from git repo
            mkdir -p /usr/gitrepo/
            git clone https://github.com/mckaywrigley/chatbot-ui /usr/gitrepo/

            # 2. install dependencies - sudo apt install npm
            npm i

            # 3. provide OpenAI API Key: OPENAI_API_KEY=YOURKEY in .env.local file in root of repo

            # 4. run app
            npm run dev

    InstanceSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: EC2InboundPorts
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 8889
            ToPort: 8889
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 8000
            ToPort: 8000
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 8306
            ToPort: 8306
            CidrIp: 0.0.0.0/0            
          
    ElasticIP:
      Type: AWS::EC2::EIP

    IPAssoc:
      Type: AWS::EC2::EIPAssociation
      Properties:
        InstanceId: !Ref EC2Instance
        EIP: !Ref 'ElasticIP'
